src/renderer/src/components/ExperimentBase/ExperimentBase.module.scss
.container {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
	width: 100%;
	height: 100%;
	padding: 1rem;
}

.hidden {
	display: none;
}

.options,
.output {
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 100%;
	height: 100%;
	background: var(--bg-900);
	border-radius: 1rem;
	overflow: hidden;
	box-shadow: inset #0000001f 0 0 1rem 0;
}

.options {
	position: relative;
	justify-content: flex-start;
	padding: 2rem;
	gap: 1rem;
	flex-basis: 30rem;
	overflow-y: auto;
	margin-right: 2rem;
	transition: all 0.5s ease-in-out;

	&.collapsed {
		opacity: 0.1;
		margin-left: -32rem;
	}

	.helpButton {
		position: absolute;
		top: 2rem;
		right: 2rem;
		cursor: pointer;
	}

	h2 {
		width: 100%;
	}
}

.output {
	.collapseButton {
		position: absolute;
        z-index: 2;
        top: 50%;
        left: 0;
        transform: translateY(-50%);
        cursor: pointer;
        padding: 0.5rem;
        background: var(--bg-800);
        border-bottom-right-radius: 1rem;
        border-top-right-radius: 1rem;
	}
	position: relative;
	justify-content: center;
}

.calculator {
	width: 100%;
	height: 100%;
}

